--- a/Views/Emprestimo/Listagem.cshtml
+++ b/Views/Emprestimo/Listagem.cshtml
@@ -22,10 +22,11 @@
 
 <div class="row">
     <div class="col-md-12">
-        <table > 
+        <table class="table table-striped"> 
             <thead>
                 <tr><th>Id</th>
                 <th>Usuario</th>
+                <th>Telefone</th>
                 <th>Data Empréstimo</th>
                 <th>Data Devolução</th>
                 <th>Livro</th>
@@ -39,6 +40,7 @@
                 <tr>
                     <td>@e.Id</td>
                     <td>@e.NomeUsuario</td>
+                    <td>@e.Telefone</td>
                     <td>@e.DataEmprestimo.ToString("dd/MM/yyyy")</td>
                     <td>@e.DataDevolucao.ToString("dd/MM/yyyy")</td>
                     <td>@e.Livro.Titulo</td>
