--- a/Views/Usuario/ListarUsuarios.cshtml
+++ b/Views/Usuario/ListarUsuarios.cshtml
@@ -28,7 +28,7 @@
                     <td>Padrão</td>
                 }
 
-                <td><a href="editarUsuario?id=@u.Id">editar</a></td>
+                <td><a href="EditarUsuario?id=@u.Id">editar</a></td>
                 <td><a href="ExcluirUsuario?id=@u.Id">excluir</a></td>
             </tr>
         }
