--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,6 @@
                                 <a class="dropdown-item" href="/Livro/Cadastro">Cadastro</a>
                             </div>
                         </li>
-                        
                         <li class="nav-item dropdown">
                             <a class="nav-link text-light dropdown-toggle" data-toggle="dropdown" href="#">Emprestimo</a>
                             <div class="dropdown-menu" aria-labelledby="menuLivros">
@@ -36,11 +35,14 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link text-light dropdown-toggle" data-toggle="dropdown" href="#">Usuarios</a>
+                            <a class="nav-link text-light dropdown-toggle" data-toggle="dropdown" href="#">Usuario</a>
                             <div class="dropdown-menu" aria-labelledby="menuLivros">
+                                <a class="dropdown-item" href="/Usuario/RegistrarUsuarios">Registrar</a>
                                 <a class="dropdown-item" href="/Usuario/ListarUsuarios">Listagem</a>
-                                <a class="dropdown-item" href="/Usuario/RegistrarUsuarios">Registro</a>
                             </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                        <a class="nav-link-text-light" asp-area="" asp-controller="Usuario" asp-action="Sair">Sair</a>
                         </li>
                     </ul>
                 </div>
