--- a/Views/Usuario/EditarUsuario.cshtml
+++ b/Views/Usuario/EditarUsuario.cshtml
@@ -4,10 +4,10 @@
 
 <form action="editarUsuario" method="post">
     <input type="text" name="Nome" id="userNome" value="@Model.Nome">
-    <input type="text" name="login" id="userLogin" value="@Model.Login">
-    <input type="text" name="senha" id="userSenha" value="@Model.Senha">
+    <input type="text" name="Login" id="userLogin" value="@Model.Login">
+    <input type="text" name="Senha" id="userSenha" value="@Model.Senha">
 
-    <select name="tipo" id="userTipo">
+    <select name="Tipo" id="userTipo">
         <option value="@Usuario.ADMIN">Administrador</option>
         <option value="@Usuario.PADRAO">Padrão</option>
     </select>
