--- a/Views/Usuario/RegistrarUsuarios.cshtml
+++ b/Views/Usuario/RegistrarUsuarios.cshtml
@@ -2,8 +2,8 @@
 
 <h1>Registre um usuário</h1>
 
-<form action="RegistrarUsuarios" method="post">
-    <input type="text" name="Nome" id="userNome" placeholder="Nome">
+<form asp-action="RegistrarUsuarios" method="post">
+    <input type="text" name="Nome" id="userNome" placeholder="Nome" class="form-control" required/>
     <input type="text" name="login" id="userLogin" placeholder="Login">
     <input type="text" name="senha" id="userSenha" placeholder="Senha">
 
