--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
                                 <a class="dropdown-item" href="/Usuario/ListarUsuarios">Listagem</a>
                             </div>
                         </li>
-                        <li class="nav-item dropdown">
-                        <a class="nav-link-text-light" asp-area="" asp-controller="Usuario" asp-action="Sair">Sair</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Usuario/Sair">Sair</a>
                         </li>
                     </ul>
                 </div>
