--- a/Views/Usuario/RegistrarUsuarios.cshtml
+++ b/Views/Usuario/RegistrarUsuarios.cshtml
@@ -3,7 +3,7 @@
 <h1>Registre um usuário</h1>
 
 <form asp-action="RegistrarUsuarios" method="post">
-    <input type="text" name="Nome" id="userNome" placeholder="Nome" class="form-control" required/>
+    <input type="text" name="Nome" id="userNome" placeholder="Nome">
     <input type="text" name="login" id="userLogin" placeholder="Login">
     <input type="text" name="senha" id="userSenha" placeholder="Senha">
 
